gccida/g3/emdnorm
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emdnorm/src/real.c:3098:12: error: expected expression
*( _OWORD *)( s + 1) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emdnorm/src/real.c:3098:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( s + 1) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emdnorm/src/real.c:3120:12: error: expected expression
*( _OWORD *)rbit = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emdnorm/src/real.c:3120:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)rbit = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emdnorm/src/obj/real.o] Error 1
